// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should create a Footer in english 1`] = `
<DocumentFragment>
  <footer>
    <div
      class="left"
    >
      Chewam © 2020
      <span
        class="spacer"
      >
          |  
      </span>
      INSEE data (
      <a
        href="https://www.data.gouv.fr/fr/datasets/fichier-des-personnes-decedees"
        rel="noopener noreferrer"
        target="_blank"
      >
        data.gouv.fr
      </a>
      )
    </div>
    <div
      class="right"
    >
      <div
        class="switch"
      >
        <i
          class="ri-moon-line"
        />
      </div>
      <span
        class="spacer"
      >
          |  
      </span>
      <a
        class="lang"
        href="/"
      >
        fr
      </a>
      <span
        class="spacer"
      >
          |  
      </span>
      version 0.0.0 (
      <a
        href="https://github.com/chewam/deaths/tree/dev"
        rel="noopener noreferrer"
        target="_blank"
      >
        dev
      </a>
      )
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should create a Footer in french 1`] = `
<DocumentFragment>
  <footer>
    <div
      class="left"
    >
      Chewam © 2020
      <span
        class="spacer"
      >
          |  
      </span>
      Données INSEE (
      <a
        href="https://www.data.gouv.fr/fr/datasets/fichier-des-personnes-decedees"
        rel="noopener noreferrer"
        target="_blank"
      >
        data.gouv.fr
      </a>
      )
    </div>
    <div
      class="right"
    >
      <div
        class="switch"
      >
        <i
          class="ri-moon-line"
        />
      </div>
      <span
        class="spacer"
      >
          |  
      </span>
      <a
        class="lang"
        href="/"
      >
        en
      </a>
      <span
        class="spacer"
      >
          |  
      </span>
      version 0.0.0 (
      <a
        href="https://github.com/chewam/deaths/tree/dev"
        rel="noopener noreferrer"
        target="_blank"
      >
        dev
      </a>
      )
    </div>
  </footer>
</DocumentFragment>
`;
